[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/BulletHellper/UI/PatternControls.gd" type="Script" id=1]
[ext_resource path="res://addons/BulletHellper/UI/PatternSelector.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/BulletHellper/UI/PropertySetters/PatternNameParameter.gd" type="Script" id=3]

[node name="PatternControls" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 390, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
param_containers = [ NodePath("VBoxContainer") ]

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 390.0
margin_bottom = 72.0
color = Color( 0.172549, 0.168627, 0.180392, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 390.0
margin_bottom = 72.0

[node name="PatternSelector" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 390.0
margin_bottom = 20.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 390.0
margin_bottom = 44.0

[node name="Duplicate" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 124.0
margin_bottom = 20.0
text = "Duplicate Current"

[node name="Delete" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 128.0
margin_right = 234.0
margin_bottom = 20.0
disabled = true
text = "Delete Current"

[node name="PatternName" type="HBoxContainer" parent="VBoxContainer" groups=[
"PropertySetters",
]]
margin_top = 48.0
margin_right = 390.0
margin_bottom = 72.0
script = ExtResource( 3 )
property = "name"

[node name="Label" type="Label" parent="VBoxContainer/PatternName"]
margin_top = 5.0
margin_right = 136.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Pattern Name:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/PatternName"]
margin_left = 140.0
margin_right = 390.0
margin_bottom = 24.0
rect_min_size = Vector2( 250, 0 )
text = "BulletPattern"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="add_pattern" from="VBoxContainer/PatternSelector" to="." method="_on_add"]
[connection signal="remove_pattern" from="VBoxContainer/PatternSelector" to="." method="_on_remove"]
[connection signal="select_pattern" from="VBoxContainer/PatternSelector" to="." method="_on_select"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Duplicate" to="." method="_on_duplicate"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Delete" to="." method="_on_remove_current"]
